<resources>
    <string name="app_name">Connect Four</string>
    <string name="gameStart">START</string>
    <string name="welcomeText">Welcome to Connect 4 \nby Team 5</string>
    <string name="userOneImage">Player 1:</string>
    <string name="userTwoImage">Player 2:</string>
    <string name="done">Done</string>
    <string name="undo">Undo</string>
    <string name="forfeit">Forfeit</string>
    <string name="game_over">Game over!</string>
    <string name="mainMenuButton">Main Menu</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="john_smith">John Smith</string>
    <string name="winner">Winner:</string>
    <string name="user_two">user_2</string>
    <string name="user_one">user_1</string>
    <string name="gamePlay">Play</string>
    <string name="loser">Loser:</string>
    <string name="rematchButton">REMATCH</string>
    <string name="howToPlay">HOW TO PLAY</string>
    <string name="gameInstructions">How To Play:</string>
    <string name="instructionSteps">
        The object of the game is to get a connect of  escape the sewers! It is your job to make sure the spooky creatures
        are safely moved to the Ghost Containment Facility.
        \n\n
        Take turns placing GCP (ghost containment pipes) on to the gameboard by dragging a GCP from
        your dock to the board and pressing INSTALL.
        \n\n
        If you do not have a use for a GCP, you can select it and hit the DISCARD button to have
        a new pipe your next turn.
        \n\n
        If you feel overwhelmed by the spectral beings, you can hit the forfeit button on your turn.
        \n\n
        Once you have a safely sealed connection to the Ghost Containment Facility, press the
        OPEN button to start the flow of ghosts. But be careful! If there are any leaks in your
        system the ghosts will escape and you will lose!
        \n\n
        Good luck! The City of East Lansing is counting on you!
    </string>

    <string name="back_to_menu_button">Back to main menu</string>
    <string name="game_over_text">GAME OVER</string>
    <string name="name">Name</string>

    <string name="your_turn">Sav, it\'s your turn!</string>
</resources>



