<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView

        android:layout_marginTop="40dp"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/gameInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/howToPlayInstructions" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:id="@+id/instructionsSteps"
            android:text="@string/instructionSteps"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/returnToMainMenu"
            android:text="@string/mainMenuButton"
            android:onClick="onMainMenu"/>



    </LinearLayout>


</RelativeLayout>