<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100sp">


    <LinearLayout

        android:gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:textAlignment="center"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/endgame_text"
        android:textStyle="bold"
        android:text="@string/game_over" />


        <TextView
            android:textAlignment="center"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/winner"
            android:textStyle="bold"
            android:text="@string/winner"  />

        <Button
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:text="@string/mainMenuButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returnToMainMenu"
                android:onClick="onMainMenu" />
        </LinearLayout>


    </LinearLayout>



