<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcomeText"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/userOne"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_user"
                    android:tint="@color/black" />

                <TextView
                    android:id="@+id/playerOne"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/userTwo"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_user"
                    android:tint="@color/black" />

                <TextView
                    android:id="@+id/playerTwo"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:gravity="center_horizontal"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp"
            android:gravity="center_horizontal|center_vertical">

            <Button
                android:id="@+id/playButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_green"
                android:text="@string/gamePlay"
                android:textSize="24sp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_margin="8dp"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/howTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_green"
                android:text="@string/howToPlay"
                android:layout_margin="8dp"
                android:textSize="24sp"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/white" />


        </LinearLayout>



    </LinearLayout>

</RelativeLayout>


